@@ -1,5 +1,7 @@
 Changes in 3.5:
 - Select fetchers added to columns menu for easier discoverability
+- Flatter icons with HiDPI support
+- Update progress in the system taskbar (no Linux support, though)
 
 Changes in 3.4.2:
 - Launch4J upgraded to fix finding the 1.8.0b101 JRE on Windows
